[project]
name = "codeexamples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "openai>=1.108.1",
    "pandas>=2.3.3",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "snoop>=0.6.0",
]
