[project]
name = "codeexamples"
version = "0.1.0"
description = "A curated collection of Python code examples demonstrating practical programming concepts, performance optimizations, and real-world implementations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core dependencies
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "openai>=1.108.1",
    "pandas>=2.3.3",
    "pymongo>=4.15.1",
    "pytest>=8.4.2",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "snoop>=0.6.0",
    # Performance examples
    "orjson>=3.10.0",
    "numexpr>=2.10.0",
    "numpy>=2.1.0",
    # Web development
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "starlette>=0.41.0",
    "playwright>=1.48.0",
    # Database & APIs
    "youtube-transcript-api>=0.6.0",
    # Security & Patterns
    "pyseto>=1.7.0",
    "babel>=2.16.0",
    "cython>=3.0.11",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "patterns>=0.4.0",
    "pytterns>=0.1.0",
    # Utilities
    "tqdm>=4.67.0",
    "pyjokes>=0.6.0",
    "pyfiglet>=1.0.0",
    "cowsay>=6.0",
    # Image processing
    "clip>=1.0.0",
    "torch>=2.5.0",
    "pillow>=11.0.0",
    # PySpark
    "pyspark>=3.5.0",
]
